--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hh-plus-plus",
-  "version": "1.11.3",
+  "version": "1.11.3.1",
   "description": "Adding things here and there in the Hentai Heroes game. Also supports HHCore-based games such as GH and CxH.",
   "private": "true",
   "scripts": {
@@ -13,14 +13,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/45026831/hh-plus-plus.git"
+    "url": "git+https://github.com/R4rum/hh-plus-plus.git"
   },
-  "author": "45026831 (Numbers)",
+  "contributors": {
+    "author": "45026831 (Numbers)",
+    "author": "Rarum"
+  },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/45026831/hh-plus-plus/issues"
+    "url": "https://github.com/R4rum/hh-plus-plus/issues"
   },
-  "homepage": "https://github.com/45026831/hh-plus-plus#readme",
+  "homepage": "https://github.com/R4rum/hh-plus-plus#readme",
   "devDependencies": {
     "eslint": "^7.32.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
